Bug 343369 - Menu in QtQuickControls Combo Box on Breeze Dark Theme Unreadable
Summary: Menu in QtQuickControls Combo Box on Breeze Dark Theme Unreadable
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QtQuickControls (other bugs)
Version First Reported In: 5.1.95
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: David Edmundson
URL: http://s18.postimg.org/h7tdi8ng9/bree...
Keywords:
: 346568 351875 352206 357202 358459 359832 360043 363395 375437 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-01-27 13:26 UTC by Maverick
Modified: 2017-01-23 09:55 UTC (History)
24 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.6.1
Sentry Crash Report:


Attachments
Screenshot on the wallpaper settings window. (228.70 KB, image/png)
2015-09-03 19:17 UTC, mathojojo
Details
Audio device settings also affected (35.65 KB, image/png)
2016-01-10 01:58 UTC, Serhiy
Details
unreadable text (230.19 KB, image/png)
2016-02-20 10:23 UTC, 31i73h4ck3r
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Maverick 2015-01-27 13:26:43 UTC
See URL

Reproducible: Always

Steps to Reproduce:
1. Set Breeze Widgets and Breeze Dark color theme
2. Set Desktop to Folder Mode
3. Right-Click on the desktop, select "Folder Settings"
4. Open any Combo box in any tab in the dialog and try to read....

Actual Results:  
Barely visible gray on white background. ComboBoxes in other dialogs aren't affected

Expected Results:  
White or light gray text on black background

Arch linux, all packages at 5.1.2

Pitily, many third-party programs have similar issues with Breeze Dark, like active textboxes in Simulink 2014a :(
Comment 1 David Edmundson 2015-01-27 21:57:11 UTC
Does it fix itself after you restart plasma?
Comment 2 Maverick 2015-01-27 22:01:34 UTC
Nope. It's not about the theme switching, it rather seems that the combobox background doesnt respect the theme settings at all.

I've also tested it on a second (freshly booted in Breeze Dark) machine.
Comment 3 David Edmundson 2015-01-27 22:05:46 UTC
Thanks
Comment 4 Maverick 2015-02-01 10:43:29 UTC
Please not that only this (Desktop settings) dialog is affected, most other dialogs (like the ones in system settings->application style etc) have properly styled comboboxes.
Comment 5 David Edmundson 2015-04-25 12:02:53 UTC
*** Bug 346568 has been marked as a duplicate of this bug. ***
Comment 6 David Edmundson 2015-09-03 14:03:57 UTC
*** Bug 352206 has been marked as a duplicate of this bug. ***
Comment 7 ichramm 2015-09-03 17:14:16 UTC
 I recently updated my Archlinux to plasma-desktop 5.4 and the problem is still present.

It seems specific to System Settings because I tested other apps (Dolphin, KDevelop) and Combo-Boxes look just fine.
Comment 8 mathojojo 2015-09-03 19:16:37 UTC
The same for me on plasma 5.4.
Comment 9 mathojojo 2015-09-03 19:17:46 UTC
Created attachment 94386 [details]
Screenshot on the wallpaper settings window.
Comment 10 G360 2015-11-01 18:56:18 UTC
KDE Bug 352653 (duplicate of this?) has a comment with the upstream bug report in Qt https://bugreports.qt.io/browse/QTBUG-48252
Comment 11 David Edmundson 2015-11-29 23:47:51 UTC
*** Bug 351875 has been marked as a duplicate of this bug. ***
Comment 12 David Edmundson 2015-12-27 15:02:41 UTC
*** Bug 357202 has been marked as a duplicate of this bug. ***
Comment 13 Serhiy 2016-01-10 01:58:25 UTC
Created attachment 96556 [details]
Audio device settings also affected

Kubuntu 15.10, Qt 5.5.1, systemsettings 5.4.3
Comment 14 Christian Stadelmann 2016-01-19 18:34:09 UTC
Can you please check whether this issue is present with different themes (e.g. oxygen) too?
Comment 15 Colin 2016-01-19 19:25:49 UTC
(In reply to Christian Stadelmann from comment #14)
> Can you please check whether this issue is present with different themes
> (e.g. oxygen) too?

It's present for all dark Desktop Themes, including Oxygen. However, I don't know how to choose a different Look And Feel to test. The only options under Look And Feel are Breeze/Breeze Dark. There's no button to install another Look And Feel.
Comment 16 Colin 2016-01-19 19:31:23 UTC
Also, the steps to reproduce are different for me since I don't know how to set the desktop to folder mode and don't care about doing that. I can instead choose "Desktop Settings" to find the same issue though. Since icons can't be put on the Desktop, I use the Folder View widget so I can follow the steps to reproduce if I right-click on that widget instead of the Desktop as well.
Comment 17 Christian Stadelmann 2016-01-19 20:05:47 UTC
Hm, there should be some other packages in your distro for that, but I don't know of any other dark look and feels.

(In reply to Colin from comment #15)
> (In reply to Christian Stadelmann from comment #14)
> > Can you please check whether this issue is present with different themes
> > (e.g. oxygen) too?
> 
> It's present for all dark Desktop Themes, including Oxygen. However, I don't
> know how to choose a different Look And Feel to test. The only options under
> Look And Feel are Breeze/Breeze Dark. There's no button to install another
> Look And Feel.

Thanks. I am running into a similiar issue, but it affects different applications. I'll link it here.
Comment 18 David Edmundson 2016-01-24 00:32:28 UTC
*** Bug 358459 has been marked as a duplicate of this bug. ***
Comment 19 Richard Llom 2016-01-29 13:18:25 UTC
Same here.

However I was wondering if this actual theme related or by the (combo box) implementation in the GUI.

For Example:
System Settings -> Multimedia -> Audio Volume -> Configuration
The combo boxes here doesn't follow color sheme, but they also appear rather random on the screen (see attachment 96556 [details]).
Where as in
System Settings -> Multimedia -> Audio and Video -> Audio Hardware Setup
Combo box follows color sheme and is correctly placed.

HTH
Comment 20 Martin Kostolný 2016-02-07 01:17:46 UTC
It looks directly related to comboboxes created in QML. QML Comboboxes not respecting system styles/colors - maybe a QT bug? I sometimes even get a misplaced QML combobox popup.

(KF 5.18, Plasma 5.5.4, Qt 5.5.1)
Comment 21 31i73h4ck3r 2016-02-20 10:23:16 UTC
Created attachment 97309 [details]
unreadable text

OS: Gentoo Linux
Plasma version: 5.5.4
Comment 22 Kai Uwe Broulik 2016-02-26 17:55:38 UTC
*** Bug 359832 has been marked as a duplicate of this bug. ***
Comment 23 Jürgen Scholz 2016-03-09 17:57:28 UTC
agdsgfds
Comment 24 Jürgen Scholz 2016-03-09 18:03:53 UTC
I am sorry for my previous message. I just wanted to add me to the CC list and before doing that I played around with the text color in the comment box.

I have the same issue with plasma 5.5.4 and ubuntu 15.10 with the kubuntu backports ppa; selecting the Breeze Dark color scheme makes combo boxes drawn by plasma shell hardly readable.

For example in the desktop settings dialog where one can select the scaling mode of the background picture. - As already shown in https://bugs.kde.org/attachment.cgi?id=94386
Comment 25 Kai Uwe Broulik 2016-03-10 13:15:26 UTC
Hi Hugo,

sorry to bother you again with this thing but I found out what QtQuick Controls ComboBox does:
It basically requests the style to paint a QFrame::StyledPanel for the background of the popup, ie. it ends up in Style::drawShapedFrameControl(...) and there we don't do anything with it and then we just end up with a white background. Can we paint the proper background color there or something like that? I don't expect anybody to actually fix QQC, so we better do something locally...
Comment 26 Anthony Fieroni 2016-03-22 14:47:33 UTC
*** Bug 360043 has been marked as a duplicate of this bug. ***
Comment 27 David Rosca 2016-03-22 15:23:18 UTC
Git commit c2008d6d3a62b3f7f6e5198e047d39b4a40ecf7e by David Rosca.
Committed on 22/03/2016 at 15:22.
Pushed by drosca into branch 'Plasma/5.6'.

Fix drawing QtQuickControls ComboBox popups

Implement drawing QStyleOptionFrame QFrame::StyledPanel shape.
FIXED-IN: 5.6.1
REVIEW: 127460

M  +14   -1    kstyle/breezestyle.cpp

http://commits.kde.org/breeze/c2008d6d3a62b3f7f6e5198e047d39b4a40ecf7e
Comment 28 Kai Uwe Broulik 2016-05-25 12:28:35 UTC
*** Bug 363395 has been marked as a duplicate of this bug. ***
Comment 29 David Edmundson 2017-01-23 09:55:47 UTC
*** Bug 375437 has been marked as a duplicate of this bug. ***