Fix drawing QtQuickControls ComboBox popups

Implement drawing QStyleOptionFrame QFrame::StyledPanel shape.

BUG: 343369
FIXED-IN: 5.6.1
REVIEW: 127460